// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getSVLogsEntityConfig > returns correct config for BATCH eventType 1`] = `
{
  "extraNote": {
    "key": "Extra note",
  },
  "lotCode": {
    "key": "LOT/Batch",
  },
  "orderNumber": {
    "key": "Order",
  },
  "plannedQty": {
    "key": "Target",
    "value": [Function],
  },
  "productName": {
    "key": "Product name",
  },
  "productSku": {
    "ignore": [Function],
    "key": "Product code",
  },
  "quantityPerSignal": {
    "key": "Quantity per signal",
    "value": [Function],
  },
  "startTime": {
    "ignore": [Function],
    "isSubheader": true,
    "key": "Product settings synced",
    "persistent": true,
    "value": [Function],
  },
}
`;

exports[`getSVLogsEntityConfig > returns correct config for CHECKLIST eventType 1`] = `
{
  "doneByEntityId": {
    "ignore": [Function],
    "key": "Done by",
    "persistent": true,
  },
  "elements": {
    "ignore": [Function],
    "key": "Task results",
    "value": [Function],
  },
  "name": {
    "key": "Checklist name",
    "persistent": true,
  },
  "status": {
    "key": "Status",
    "value": [Function],
  },
}
`;

exports[`getSVLogsEntityConfig > returns correct config for DOWNTIME eventType 1`] = `
{
  "count": {
    "ignore": [Function],
    "key": "Stop count",
  },
  "endTime": {
    "key": "End time",
    "persistent": true,
    "value": [Function],
  },
  "extraNote": {
    "key": "Extra note",
  },
  "isJoined": {
    "key": "Joined stop",
    "value": [Function],
  },
  "location": {
    "key": "Machine location",
  },
  "reason": {
    "key": "Reason",
    "persistent": true,
    "value": [Function],
  },
  "startTime": {
    "key": "Start time",
    "persistent": true,
    "value": [Function],
  },
}
`;

exports[`getSVLogsEntityConfig > returns correct config for OPERATOR eventType 1`] = `
{
  "endTime": {
    "key": "End time",
    "persistent": true,
    "value": [Function],
  },
  "operators": {
    "key": "Operators",
    "persistent": true,
    "value": [Function],
  },
  "startTime": {
    "key": "Start time",
    "persistent": true,
    "value": [Function],
  },
}
`;

exports[`getSVLogsEntityConfig > returns correct config for SCRAP eventType 1`] = `
{
  "extraNote": {
    "key": "Extra note",
  },
  "quantity": {
    "key": "quantity",
    "value": [Function],
  },
  "reason": {
    "key": "Reason",
    "persistent": true,
    "value": [Function],
  },
}
`;

exports[`getSVLogsEntityConfig > returns correct config for SHIFT eventType 1`] = `
{
  "endTime": {
    "key": "End time",
    "value": [Function],
  },
  "startTime": {
    "key": "Start time",
    "value": [Function],
  },
}
`;

exports[`getSVLogsEntityConfig > returns correct config for SIGNAL eventType 1`] = `
{
  "extraNote": {
    "key": "Extra note",
  },
  "quantity": {
    "key": "quantity",
    "value": [Function],
  },
}
`;

exports[`getSVLogsEntityConfig > returns correct config for SPEED_LOSS eventType 1`] = `
{
  "endTime": {
    "key": "End time",
    "persistent": true,
    "value": [Function],
  },
  "extraNote": {
    "key": "Extra note",
  },
  "position": {
    "key": "Machine location",
  },
  "reason": {
    "key": "Reason",
    "persistent": true,
    "value": [Function],
  },
  "startTime": {
    "key": "Start time",
    "persistent": true,
    "value": [Function],
  },
}
`;
